drow snake board

--- a/index.html
+++ b/index.html
@@ -7,7 +7,337 @@
 </head>
 <body>
 <div class="container">
-    <img src="images/background.jpg" alt="background">
+    <div class="players">
+        <div class="player_1">
+            <img src="images/player.png" alt="player">
+        </div>
+        <div class="player_2">
+            <img src="images/player.png" alt="player">
+        </div>
+    </div>
+    <div class="board">
+        <div class="row1">
+            <div class="sr1">
+                <h2>1</h2>
+            </div>
+            <div class="sr2">
+                <h2>2</h2>
+            </div>
+            <div class="sr3">
+                <h2>3</h2>
+            </div>
+            <div class="sr4">
+                <h2>4</h2>
+            </div>
+            <div class="sr5">
+                <h2>5</h2>
+            </div>
+            <div class="sr6">
+                <h2>6</h2>
+            </div>
+            <div class="sr7">
+                <h2>7</h2>
+            </div>
+            <div class="sr8">
+                <h2>8</h2>
+            </div>
+            <div class="sr9">
+                <h2>9</h2>
+            </div>
+            <div class="sr10">
+                <h2>10</h2>
+            </div>
+        </div>
+        <div class="row2">
+            <div class="sr1">
+                <h2>20</h2>
+            </div>
+            <div class="sr2">
+                <h2>19</h2>
+            </div>
+            <div class="sr3">
+                <h2>18</h2>
+            </div>
+            <div class="sr4">
+                <h2>17</h2>
+            </div>
+            <div class="sr5">
+                <h2>16</h2>
+            </div>
+            <div class="sr6">
+                <h2>15</h2>
+            </div>
+            <div class="sr7">
+                <h2>14</h2>
+            </div>
+            <div class="sr8">
+                <h2>13</h2>
+            </div>
+            <div class="sr9">
+                <h2>12</h2>
+            </div>
+            <div class="sr10">
+                <h2>11</h2>
+            </div>
+        </div>
+        <div class="row3">
+            <div class="sr1">
+                <h2>21</h2>
+            </div>
+            <div class="sr2">
+                <h2>22</h2>
+            </div>
+            <div class="sr3">
+                <h2>23</h2>
+            </div>
+            <div class="sr4">
+                <h2>24</h2>
+            </div>
+            <div class="sr5">
+                <h2>25</h2>
+            </div>
+            <div class="sr6">
+                <h2>26</h2>
+            </div>
+            <div class="sr7">
+                <h2>27</h2>
+            </div>
+            <div class="sr8">
+                <h2>28</h2>
+            </div>
+            <div class="sr9">
+                <h2>29</h2>
+            </div>
+            <div class="sr10">
+                <h2>30</h2>
+            </div>
+        </div>
+        <div class="row4">
+            <div class="sr1">
+                <h2>40</h2>
+            </div>
+            <div class="sr2">
+                <h2>39</h2>
+            </div>
+            <div class="sr3">
+                <h2>38</h2>
+            </div>
+            <div class="sr4">
+                <h2>37</h2>
+            </div>
+            <div class="sr5">
+                <h2>36</h2>
+            </div>
+            <div class="sr6">
+                <h2>35</h2>
+            </div>
+            <div class="sr7">
+                <h2>44</h2>
+            </div>
+            <div class="sr8">
+                <h2>33</h2>
+            </div>
+            <div class="sr9">
+                <h2>32</h2>
+            </div>
+            <div class="sr10">
+                <h2>31</h2>
+            </div>
+        </div>
+        <div class="row5">
+            <div class="sr1">
+                <h2>41</h2>
+            </div>
+            <div class="sr2">
+                <h2>42</h2>
+            </div>
+            <div class="sr3">
+                <h2>43</h2>
+            </div>
+            <div class="sr4">
+                <h2>44</h2>
+            </div>
+            <div class="sr5">
+                <h2>45</h2>
+            </div>
+            <div class="sr6">
+                <h2>46</h2>
+            </div>
+            <div class="sr7">
+                <h2>47</h2>
+            </div>
+            <div class="sr8">
+                <h2>48</h2>
+            </div>
+            <div class="sr9">
+                <h2>49</h2>
+            </div>
+            <div class="sr10">
+                <h2>50</h2>
+            </div>
+        </div>
+        <div class="row6">
+            <div class="sr1">
+                <h2>60</h2>
+            </div>
+            <div class="sr2">
+                <h2>59</h2>
+            </div>
+            <div class="sr3">
+                <h2>58</h2>
+            </div>
+            <div class="sr4">
+                <h2>57</h2>
+            </div>
+            <div class="sr5">
+                <h2>56</h2>
+            </div>
+            <div class="sr6">
+                <h2>55</h2>
+            </div>
+            <div class="sr7">
+                <h2>54</h2>
+            </div>
+            <div class="sr8">
+                <h2>53</h2>
+            </div>
+            <div class="sr9">
+                <h2>52</h2>
+            </div>
+            <div class="sr10">
+                <h2>51</h2>
+            </div>
+        </div>
+        <div class="row7">
+            <div class="sr1">
+                <h2>61</h2>
+            </div>
+            <div class="sr2">
+                <h2>62</h2>
+            </div>
+            <div class="sr3">
+                <h2>63</h2>
+            </div>
+            <div class="sr4">
+                <h2>64</h2>
+            </div>
+            <div class="sr5">
+                <h2>65</h2>
+            </div>
+            <div class="sr6">
+                <h2>66</h2>
+            </div>
+            <div class="sr7">
+                <h2>67</h2>
+            </div>
+            <div class="sr8">
+                <h2>68</h2>
+            </div>
+            <div class="sr9">
+                <h2>69</h2>
+            </div>
+            <div class="sr10">
+                <h2>70</h2>
+            </div>
+        </div>
+        <div class="row8">
+            <div class="sr1">
+                <h2>80</h2>
+            </div>
+            <div class="sr2">
+                <h2>79</h2>
+            </div>
+            <div class="sr3">
+                <h2>78</h2>
+            </div>
+            <div class="sr4">
+                <h2>77</h2>
+            </div>
+            <div class="sr5">
+                <h2>76</h2>
+            </div>
+            <div class="sr6">
+                <h2>75</h2>
+            </div>
+            <div class="sr7">
+                <h2>74</h2>
+            </div>
+            <div class="sr8">
+                <h2>73</h2>
+            </div>
+            <div class="sr9">
+                <h2>72</h2>
+            </div>
+            <div class="sr10">
+                <h2>71</h2>
+            </div>
+        </div>
+        <div class="row9">
+            <div class="sr1">
+                <h2>81</h2>
+            </div>
+            <div class="sr2">
+                <h2>82</h2>
+            </div>
+            <div class="sr3">
+                <h2>83</h2>
+            </div>
+            <div class="sr4">
+                <h2>84</h2>
+            </div>
+            <div class="sr5">
+                <h2>85</h2>
+            </div>
+            <div class="sr6">
+                <h2>86</h2>
+            </div>
+            <div class="sr7">
+                <h2>87</h2>
+            </div>
+            <div class="sr8">
+                <h2>88</h2>
+            </div>
+            <div class="sr9">
+                <h2>89</h2>
+            </div>
+            <div class="sr10">
+                <h2>90</h2>
+            </div>
+        </div>
+        <div class="row10">
+            <div class="sr1">
+                <h2>100</h2>
+            </div>
+            <div class="sr2">
+                <h2>99</h2>
+            </div>
+            <div class="sr3">
+                <h2>98</h2>
+            </div>
+            <div class="sr4">
+                <h2>97</h2>
+            </div>
+            <div class="sr5">
+                <h2>96</h2>
+            </div>
+            <div class="sr6">
+                <h2>95</h2>
+            </div>
+            <div class="sr7">
+                <h2>94</h2>
+            </div>
+            <div class="sr8">
+                <h2>93</h2>
+            </div>
+            <div class="sr9">
+                <h2>92</h2>
+            </div>
+            <div class="sr10">
+                <h2>91</h2>
+            </div>
+        </div>
+    </div>
+
 </div>
 </body>
 </html>
