Add snake images

--- a/index.html
+++ b/index.html
@@ -336,8 +336,13 @@
                 <h2>91</h2>
             </div>
         </div>
+        <div class="snake">
+            <img class="snake_1" src="images/snake1.png" alt="snake">
+            <img class="snake_2" src="images/snake2.png" alt="snake">
+            <img class="snake_3" src="images/snake3.png" alt="snake">
+            <img class="snake_4" src="images/snake4.png" alt="snake">
+        </div>
     </div>
-
 </div>
 </body>
 </html>
