Add ladder images

--- a/index.html
+++ b/index.html
@@ -342,6 +342,12 @@
             <img class="snake_3" src="images/snake3.png" alt="snake">
             <img class="snake_4" src="images/snake4.png" alt="snake">
         </div>
+        <div class="ladder">
+            <img class="ladder_1" src="images/ladder1.png" alt="ladder">
+            <img class="ladder_2" src="images/ladder2.png" alt="ladder">
+            <img class="ladder_3" src="images/ladder3.png" alt="ladder">
+            <img class="ladder_4" src="images/ladder3.png" alt="ladder">
+        </div>
     </div>
 </div>
 </body>
